@@ -712,6 +712,8 @@
  ! API: NoTitleDisplayer gets replaced by NoTitleBarDisplayer. The new displayer extends BasicDockableDisplayer (now all displayer are derived from this class) and is able to show a DockTitle if asked to do so. 
  - Bugfix: The "showing" property is now checked for correctness when the DockController of a Dockable changes.
  - Bugfix: Resizing a ScreenDockWindow to a size smaller than its acceptable minimum will no longer move the window.
- 
+ - APi: The new WizardSplitDockStation is a SplitDockStation that does keep its children in columns. It does store the size of children as pixels, not as ratios. 
+ - API: The ScreenDropSizeStrategy allows to influence the size a dropped Dockable on a ScreenDockStation gets 
+
 [Todo]
 - Drop StackDockStation over Dockable and merge them
